Implemented auth/refresh method
